--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@tunnel/use-state-with-callback",
   "version": "0.0.0",
   "type": "module",
+	"exports": "./index.js",
   "peerDependencies": {
     "react": "^18"
   }
